# Quake

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
WinQuake/: CMakeLists.txt
WinQuake/src/gas2masm/: CMakeLists.txt  gas2masm.cpp
WinQuake/src/winquake/: CMakeLists.txt  client.h  cmd.cpp  cmd.h  common.cpp  common.h  console.cpp  console.h  cvar.cpp  cvar.h  host.cpp  host_cmd.cpp  input.cpp  input.h  keys.cpp  keys.h  mathlib.cpp  mathlib.h  pr_cmds.cpp  pr_comp.h  pr_edict.cpp  pr_exec.cpp  progs.h  quakedef.h  r_part.cpp  render.h  resource.h  server.h  snd_dma.cpp  snd_mem.cpp  snd_mix.cpp  sys.cpp  sys.h  sys_linux.cpp  sys_null.c  sys_win.cpp  sys_wind.c  vid.cpp  vid.h  winquake.h  (+3 more)
WinQuake/src/winquake/client/: CMakeLists.txt  cl_demo.cpp  cl_input.cpp  cl_parse.cpp  input.h
WinQuake/src/winquake/client/renderer/: r_part.cpp
WinQuake/src/winquake/client/renderer/opengl/: gl_screen.cpp
WinQuake/src/winquake/client/renderer/software/: d_modech.cpp  d_surf.cpp  model.h  r_main.cpp  r_surf.cpp
WinQuake/src/winquake/client/sound/: snd_dma.cpp  snd_mix.cpp  sound.cpp  sound.h
WinQuake/src/winquake/client/ui/: menu.cpp  menu.h  sbar.cpp
WinQuake/src/winquake/engine/: CMakeLists.txt  bspfile.h  cmd.cpp  common.cpp  common.h  console.cpp  console.h  crc.cpp  cvar.cpp  cvar.h  host.cpp  host_cmd.cpp  mathlib.cpp  mathlib.h  quakedef.h  spritegn.h  sys.cpp  sys.h  wad.cpp  wad.h  winquake.h  zone.cpp
WinQuake/src/winquake/engine/client/: chase.cpp  cl_demo.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.h  keys.cpp  keys.h  vid.cpp  vid.h  view.cpp  view.h
WinQuake/src/winquake/engine/client/renderer/: draw.h  r_part.cpp  render.h  screen.h
WinQuake/src/winquake/engine/client/renderer/opengl/: gl_draw.cpp  gl_mesh.cpp  gl_model.cpp  gl_refrag.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_test.cpp  gl_warp.cpp  glquake.h
WinQuake/src/winquake/engine/client/renderer/software/: d_init.cpp  draw.cpp  r_draw.cpp  r_edge.cpp  screen.cpp
WinQuake/src/winquake/engine/client/sound/: CDAudio.cpp  CDAudio.h  ICDAudio.h  ISoundSystem.h  OggSoundLoader.cpp  OggSoundLoader.h  SoundSystem.cpp  SoundSystem.h  WaveSoundLoader.cpp  WaveSoundLoader.h  cdaudio.h  snd_dma.cpp  snd_mem.cpp  snd_mix.cpp  sound.cpp  sound.h  sound_internal.h
WinQuake/src/winquake/engine/client/ui/: menu.cpp  sbar.cpp  sbar.h
WinQuake/src/winquake/engine/net/: net_dgrm.h  net_loop.cpp  net_loop.h  net_main.cpp  net_vcr.cpp  net_vcr.h  net_win.cpp  net_wins.cpp  net_wins.h
WinQuake/src/winquake/engine/plat/linux/: cd_linux.cpp
WinQuake/src/winquake/engine/plat/windows/: cd_win.cpp
WinQuake/src/winquake/engine/server/: conproc.cpp  server.h  sv_main.cpp  sv_move.cpp  sv_phys.cpp  world.cpp  world.h
WinQuake/src/winquake/engine/server/progs/: pr_cmds.cpp  pr_comp.h  pr_edict.cpp  progdefs.h  progs.h
WinQuake/src/winquake/game/: CMakeLists.txt  Game.cpp  Game.h  IGame.h  ai.cpp  ai.h  animation.cpp  animation.h  boss.cpp  buttons.cpp  client.cpp  client.h  combat.cpp  combat.h  demon.cpp  dog.cpp  doors.cpp  doors.h  enforcer.cpp  fight.cpp  fight.h  fish.cpp  functionmap.h  game_world.cpp  game_world.h  hknight.cpp  items.cpp  items.h  knight.cpp  misc.cpp  monsters.cpp  monsters.h  ogre.cpp  oldone.cpp  plats.cpp  plats.h  player.cpp  player.h  shalrath.cpp  shambler.cpp  (+11 more)
WinQuake/src/winquake/net/: CMakeLists.txt  net.h  net_dgrm.cpp  net_main.cpp  net_udp.c  net_udp.cpp  net_udp.h  net_vcr.cpp  net_wins.cpp  net_wins.h  net_wipx.cpp
WinQuake/src/winquake/plat/linux/: CMakeLists.txt  cd_linux.cpp  sys_linux.cpp
WinQuake/src/winquake/plat/windows/: CMakeLists.txt  cd_win.cpp  gl_vidnt.cpp  in_win.cpp  snd_win.cpp  sys_win.cpp
WinQuake/src/winquake/renderer/: screen.h
WinQuake/src/winquake/renderer/opengl/: CMakeLists.txt  gl_draw.cpp  gl_mesh.cpp  gl_model.cpp  gl_model.h  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_screen.cpp  gl_vidnt.cpp  glquake.h
WinQuake/src/winquake/renderer/software/: CMakeLists.txt  d_edge.cpp  d_iface.h  d_init.cpp  d_local.h  d_part.cpp  d_polyse.cpp  d_scan.cpp  d_sprite.cpp  d_surf.cpp  draw.cpp  model.cpp  model.h  r_aclip.cpp  r_alias.cpp  r_bsp.cpp  r_draw.cpp  r_edge.cpp  r_local.h  r_main.cpp  r_misc.cpp  r_shared.h  r_surf.cpp  screen.cpp  vid_win.cpp
WinQuake/src/winquake/server/: CMakeLists.txt  sv_main.cpp  sv_move.cpp  sv_user.cpp
WinQuake/src/winquake/server/progs/: progs.h
cmake/: LinuxToolchain.cmake
src/: CMakeLists.txt  winquake.rc
src/client_launcher/: CMakeLists.txt  Main.cpp
src/common/: CMakeLists.txt  Platform.h
src/dedicated_launcher/: CMakeLists.txt  Main.cpp
src/engine/: CMakeLists.txt  anorm_dots.h  cmd.h  common.cpp  common.h  cvar.h  host.cpp  host_cmd.cpp  mathlib.cpp  modelgen.h  protocol.h  quakedef.h  sys.cpp  wad.cpp  winquake.h  zone.cpp  zone.h
src/engine/client/: cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.h  input.cpp  input.h  vid.h
src/engine/client/renderer/: render.h
src/engine/client/renderer/opengl/: CMakeLists.txt  gl_mesh.cpp  gl_model.h  gl_rlight.cpp  glquake.h
src/engine/client/renderer/software/: CMakeLists.txt  r_main.cpp
src/engine/client/sound/: CDAudio.cpp  CDAudio.h  ICDAudio.h  ISoundSystem.h  SoundSystem.cpp  SoundSystem.h  WaveSoundLoader.h  sound.cpp  sound.h  sound_internal.h
src/engine/client/ui/: menu.cpp  menu.h  sbar.cpp
src/engine/game/: CMakeLists.txt  Game.cpp  ai.h  animation.h  boss.cpp  buttons.cpp  combat.cpp  entitymap.h  items.cpp  misc.h  monsters.cpp  wizard.cpp
src/engine/net/: CGNSNetSystem.cpp  CGNSNetSystem.h  net.h  net_dgrm.cpp  net_dgrm.h  net_main.cpp  net_vcr.cpp  net_vcr.h  net_win.cpp
src/engine/server/: server.h  sv_main.cpp  sv_user.cpp  world.cpp  world.h
src/engine/server/progs/: pr_cmds.cpp  pr_edict.cpp  progdefs.h
src/game/: IGame.h  ai.cpp  animation.cpp  demon.cpp  hknight.cpp  items.h  monsters.h  oldone.cpp  player.cpp  player.h  tarbaby.cpp  (+3 more)
src/stdlib/: CMakeLists.txt  IClientLauncher.h  IDedicatedConsole.h  IDedicatedLauncher.h  interface.cpp  interface.h
(+1 files in other folders)
